--- a/index.html
+++ b/index.html
@@ -3,10 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../task4-2/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Task4-2</title>
+    <style>
+    .banner-image{
+    background-image: url('../task4-2/img.jpg');
+    background-size: cover;
+    background-color: blue;
+    opacity: 50%;
+}
+.color{
+    opacity: 100%;
+}
+.banner1-image{
+    background-image: url('../task4-2/img3.jpg');
+    background-size: cover;
+    background-color: blue;
+    opacity: 50%;
+
+}
+.textnav{
+    transform:translate(0,-350px);
+}
+.card1{
+   background-color: white;
+   width: 40px;
+   height: 30px;
+   justify-content: center;
+   align-items: center;
+   border:1px solid white;
+   border-radius: 10%;
+}
+.parent{
+    border:1px solid white;
+    height: 80px;
+}
+.link{
+    text-decoration: none;
+}
+.transform{
+    transform:translate(0,-60px);
+}
+.Instructor{
+    height: 1000px;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    
+}
+.Course{
+    height: 1000px;
+    margin-top: 100px;
+    margin-bottom: 500px;
+}
+
+.img1{
+    border:1px solid rgb(165, 209, 224);
+    border-radius: 100%;
+    background-color: white;
+
+}
+.bg{
+    color: rgba(177, 173, 173, 0.945);
+}
+.video{
+    width: 500px;
+    height: 400px;
+    background-color: lightblue;
+}
+.vid{
+    width: 500px;
+    height: 350px;
+    transform:translate(-50px,-5px);
+}
+.cards{
+    box-shadow:inset 0px 0px 103px 0px rgba(228, 223, 223, 0.75);
+}
+.sli{
+    width: 5%;
+    border: 1px solid white;
+    border-radius: 100%;
+}
+.facebook{
+    width: 15%;
+    border: 1px solid white;
+    border-radius: 100%;
+}
+.foot{
+    height: 500px;
+}
+.about{
+    margin-top: 300px;
+    margin-bottom: 200px;
+}
+@media screen and (max-width:1400px) {
+    html{
+        font-size: 16px;
+    }
+ nav button{
+    display: block;
+ }
+   nav ul{
+    display: none;
+   } 
+   nav{
+    padding: 0 50px;
+   }
+}
+    </style>
 </head>
 <body>
   <div class="header">
@@ -235,7 +339,7 @@
 <!--start Instructor-->
 <div class="Instructor text-bg-light">
     <div class="container">
-    <img src="../task4-2/img/teacher.jpg" class="transform rounded float-end"  alt="teacher">
+    <img src="../task4-2/teacher.jpg" class="transform rounded float-end"  alt="teacher">
     <h3 class="text-primary">Become an Instructor</h3>
     <div class="col-lg-6">
     <p class="mt-3 " style="width: 50%;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quae asperiores repudiandae molestiae neque aperiam enim rerum. Doloremque suscipit in numquam quia cupiditate dolore eum, tempore, eius, aspernatur sint cumque.</p>
@@ -324,7 +428,7 @@
           <!--box1-->
     <div class=" col-lg-4 col-md-6 col-sm-12">
     <div class="card mt-3" style="width: 18rem;">
-      <img src="../task4-2/img/img1.jpg" class="card-img-top" alt="img1">
+      <img src="../task4-2/img1.jpg" class="card-img-top" alt="img1">
       <div class="container">
       <div class="card-body">
         <p class="text-primary float-start"><i class="fa fa-book text-primary gx-2 px-2" aria-hidden="true"></i>43 Lesson<p class="text-warning float-end"><i class="fa fa-star text-warning gx-2 px-2" aria-hidden="true"></i>4.8</p></p>
@@ -341,7 +445,7 @@
       <!--box2-->
       <div class=" col-lg-4 col-md-6 col-sm-12">
         <div class="card mt-3" style="width: 18rem;">
-          <img src="../task4-2/img/img2.jpg" class="card-img-top" alt="img1">
+          <img src="../task4-2/img2.jpg" class="card-img-top" alt="img1">
           <div class="container">
           <div class="card-body">
             <p class="text-primary float-start"><i class="fa fa-book text-primary gx-2 px-2" aria-hidden="true"></i>43 Lesson<p class="text-warning float-end"><i class="fa fa-star text-warning gx-2 px-2" aria-hidden="true"></i>4.8</p></p>
@@ -358,7 +462,7 @@
           <!--box3-->
     <div class=" col-lg-4 col-md-6 col-sm-12">
       <div class="card mt-3" style="width: 18rem;">
-        <img src="../task4-2/img/img4.jpg" class="card-img-top" alt="img1">
+        <img src="../task4-2/img4.jpg" class="card-img-top" alt="img1">
         <div class="container">
         <div class="card-body">
           <p class="text-primary float-start"><i class="fa fa-book text-primary" aria-hidden="true"></i>43 Lesson<p class="text-warning float-end"><i class="fa fa-star text-warning" aria-hidden="true"></i>4.8</p></p>
@@ -398,7 +502,7 @@
       <div class="container">
       <div class="video float-end">
         <div class="col-lg-3 col-md-6 col-sm-12">
-       <video src="../task4-2/img/video.mp4" controls class="vid" ></video>
+       <video src="../task4-2/video.mp4" controls class="vid" ></video>
 </div>
       </div>
       <div class="col-lg-6">
@@ -445,7 +549,7 @@
      <div class="card mb-3" style="max-width: 540px;">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="../task4-2/img/img6.jpg" class="img-fluid rounded-start" alt="img6">
+          <img src="../task4-2/img6.jpg" class="img-fluid rounded-start" alt="img6">
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -465,7 +569,7 @@
        <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="../task4-2/img/img7.jpg" class="img-fluid rounded-start" alt="img5">
+            <img src="../task4-2/img7.jpg" class="img-fluid rounded-start" alt="img5">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -547,13 +651,13 @@
           </div>
           <div class="carousel-inner">
           <div class="carousel-item active text-center">
-            <img src="../task4-2/img/tea1.jpg" class="sli" alt="teacher">
+            <img src="../task4-2/tea1.jpg" class="sli" alt="teacher">
           </div>
           <div class="carousel-item text-center">
-            <img src="../task4-2/img/tea2.jpg" class="sli" alt="teacher">
+            <img src="../task4-2/tea2.jpg" class="sli" alt="teacher">
           </div>
           <div class="carousel-item text-center">
-            <img src="../task4-2/img/tea3.jpg" class="sli" alt="teacher">
+            <img src="../task4-2/tea3.jpg" class="sli" alt="teacher">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -578,7 +682,7 @@
      <div class="container">
       <div class="d-flex justify-conent-center">
         <div class="col-lg-5">
-    <img src="../task4-2/img/img3.jpg" class="image mt-5 w-100 " alt="Student">
+    <img src="../task4-2/img3.jpg" class="image mt-5 w-100 " alt="Student">
     </div>
     <div class="col-lg-8">
       <h5 class="text-primary mx-4 pt-5">Why Choose Us</h5>
@@ -588,7 +692,7 @@
         Good Teacher and Staffs</h5>
       <div class="d-flex justify-conent-center">
       <div class="col-lg-2">
-        <img src="../task4-2/img/img5.jpg" class="image mt-2 mx-5 w-100 " alt="Student">
+        <img src="../task4-2/img5.jpg" class="image mt-2 mx-5 w-100 " alt="Student">
         </div>
         <div class="col-lg-8">
         <p class="mx-5 px-3">Lorem ipsum dolor sit amet consectetur repudiandae molestiae</p><p class="mx-5 px-3">Lorem, ipsum dolor sit amet consectetur adipisicing ipsum dolor sit amet consectetur</p>
@@ -626,14 +730,14 @@
           <h5 class="m-4 mx-2">Gallery</h5>
             <div class="col-lg-3">
               <div class="d-flex ">
-              <img src="../task4-2/img/img5.jpg" class="image m-2 w-100 " alt="Student">
-              <img src="../task4-2/img/img5.jpg" class="image m-2 w-100 " alt="Student">
-              <img src="../task4-2/img/img5.jpg" class="image m-2 w-100 " alt="Student">
+              <img src="../task4-2/img5.jpg" class="image m-2 w-100 " alt="Student">
+              <img src="../task4-2/img5.jpg" class="image m-2 w-100 " alt="Student">
+              <img src="../task4-2/img5.jpg" class="image m-2 w-100 " alt="Student">
             </div>
               <div class="d-flex">
-              <img src="../task4-2/img/img5.jpg" class="image m-2 w-100 " alt="Student">
-              <img src="../task4-2/img/img5.jpg" class="image m-2 w-100 " alt="Student">
-              <img src="../task4-2/img/img5.jpg" class="image m-2 w-100 " alt="Student">
+              <img src="../task4-2/img5.jpg" class="image m-2 w-100 " alt="Student">
+              <img src="../task4-2/img5.jpg" class="image m-2 w-100 " alt="Student">
+              <img src="../task4-2/img5.jpg" class="image m-2 w-100 " alt="Student">
               </div>
               </div>
          </div>
