--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Task4-2</title>
     <style>
     .banner-image{
-    background-image: url('../task4-2/img.jpg');
+    background-image: url('../task4-2/assets/img.jpg');
     background-size: cover;
     background-color: blue;
     opacity: 50%;
@@ -17,7 +17,7 @@
     opacity: 100%;
 }
 .banner1-image{
-    background-image: url('../task4-2/img3.jpg');
+    background-image: url('../task4-2/assets/img3.jpg');
     background-size: cover;
     background-color: blue;
     opacity: 50%;
@@ -339,7 +339,7 @@
 <!--start Instructor-->
 <div class="Instructor text-bg-light">
     <div class="container">
-    <img src="../task4-2/teacher.jpg" class="transform rounded float-end"  alt="teacher">
+    <img src="../task4-2/assets/teacher.jpg" class="transform rounded float-end"  alt="teacher">
     <h3 class="text-primary">Become an Instructor</h3>
     <div class="col-lg-6">
     <p class="mt-3 " style="width: 50%;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quae asperiores repudiandae molestiae neque aperiam enim rerum. Doloremque suscipit in numquam quia cupiditate dolore eum, tempore, eius, aspernatur sint cumque.</p>
@@ -428,7 +428,7 @@
           <!--box1-->
     <div class=" col-lg-4 col-md-6 col-sm-12">
     <div class="card mt-3" style="width: 18rem;">
-      <img src="../task4-2/img1.jpg" class="card-img-top" alt="img1">
+      <img src="../task4-2/assets/img1.jpg" class="card-img-top" alt="img1">
       <div class="container">
       <div class="card-body">
         <p class="text-primary float-start"><i class="fa fa-book text-primary gx-2 px-2" aria-hidden="true"></i>43 Lesson<p class="text-warning float-end"><i class="fa fa-star text-warning gx-2 px-2" aria-hidden="true"></i>4.8</p></p>
@@ -445,7 +445,7 @@
       <!--box2-->
       <div class=" col-lg-4 col-md-6 col-sm-12">
         <div class="card mt-3" style="width: 18rem;">
-          <img src="../task4-2/img2.jpg" class="card-img-top" alt="img1">
+          <img src="../task4-2/assets/img2.jpg" class="card-img-top" alt="img1">
           <div class="container">
           <div class="card-body">
             <p class="text-primary float-start"><i class="fa fa-book text-primary gx-2 px-2" aria-hidden="true"></i>43 Lesson<p class="text-warning float-end"><i class="fa fa-star text-warning gx-2 px-2" aria-hidden="true"></i>4.8</p></p>
@@ -462,7 +462,7 @@
           <!--box3-->
     <div class=" col-lg-4 col-md-6 col-sm-12">
       <div class="card mt-3" style="width: 18rem;">
-        <img src="../task4-2/img4.jpg" class="card-img-top" alt="img1">
+        <img src="../task4-2/assets/img4.jpg" class="card-img-top" alt="img1">
         <div class="container">
         <div class="card-body">
           <p class="text-primary float-start"><i class="fa fa-book text-primary" aria-hidden="true"></i>43 Lesson<p class="text-warning float-end"><i class="fa fa-star text-warning" aria-hidden="true"></i>4.8</p></p>
@@ -502,7 +502,7 @@
       <div class="container">
       <div class="video float-end">
         <div class="col-lg-3 col-md-6 col-sm-12">
-       <video src="../task4-2/video.mp4" controls class="vid" ></video>
+       <video src="../task4-2/assets/video.mp4" controls class="vid" ></video>
 </div>
       </div>
       <div class="col-lg-6">
@@ -549,7 +549,7 @@
      <div class="card mb-3" style="max-width: 540px;">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="../task4-2/img6.jpg" class="img-fluid rounded-start" alt="img6">
+          <img src="../task4-2/assets/img6.jpg" class="img-fluid rounded-start" alt="img6">
         </div>
         <div class="col-md-8">
           <div class="card-body">
@@ -569,7 +569,7 @@
        <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="../task4-2/img7.jpg" class="img-fluid rounded-start" alt="img5">
+            <img src="../task4-2/assets/img7.jpg" class="img-fluid rounded-start" alt="img5">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -651,13 +651,13 @@
           </div>
           <div class="carousel-inner">
           <div class="carousel-item active text-center">
-            <img src="../task4-2/tea1.jpg" class="sli" alt="teacher">
+            <img src="../task4-2/assets/tea1.jpg" class="sli" alt="teacher">
           </div>
           <div class="carousel-item text-center">
-            <img src="../task4-2/tea2.jpg" class="sli" alt="teacher">
+            <img src="../task4-2/assets/tea2.jpg" class="sli" alt="teacher">
           </div>
           <div class="carousel-item text-center">
-            <img src="../task4-2/tea3.jpg" class="sli" alt="teacher">
+            <img src="../task4-2/assets/tea3.jpg" class="sli" alt="teacher">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -682,7 +682,7 @@
      <div class="container">
       <div class="d-flex justify-conent-center">
         <div class="col-lg-5">
-    <img src="../task4-2/img3.jpg" class="image mt-5 w-100 " alt="Student">
+    <img src="../task4-2/assets/img3.jpg" class="image mt-5 w-100 " alt="Student">
     </div>
     <div class="col-lg-8">
       <h5 class="text-primary mx-4 pt-5">Why Choose Us</h5>
@@ -692,7 +692,7 @@
         Good Teacher and Staffs</h5>
       <div class="d-flex justify-conent-center">
       <div class="col-lg-2">
-        <img src="../task4-2/img5.jpg" class="image mt-2 mx-5 w-100 " alt="Student">
+        <img src="../task4-2/assets/img5.jpg" class="image mt-2 mx-5 w-100 " alt="Student">
         </div>
         <div class="col-lg-8">
         <p class="mx-5 px-3">Lorem ipsum dolor sit amet consectetur repudiandae molestiae</p><p class="mx-5 px-3">Lorem, ipsum dolor sit amet consectetur adipisicing ipsum dolor sit amet consectetur</p>
@@ -730,14 +730,14 @@
           <h5 class="m-4 mx-2">Gallery</h5>
             <div class="col-lg-3">
               <div class="d-flex ">
-              <img src="../task4-2/img5.jpg" class="image m-2 w-100 " alt="Student">
-              <img src="../task4-2/img5.jpg" class="image m-2 w-100 " alt="Student">
-              <img src="../task4-2/img5.jpg" class="image m-2 w-100 " alt="Student">
+              <img src="../task4-2/assets/img5.jpg" class="image m-2 w-100 " alt="Student">
+              <img src="../task4-2/assets/img5.jpg" class="image m-2 w-100 " alt="Student">
+              <img src="../task4-2/assets/img5.jpg" class="image m-2 w-100 " alt="Student">
             </div>
               <div class="d-flex">
-              <img src="../task4-2/img5.jpg" class="image m-2 w-100 " alt="Student">
-              <img src="../task4-2/img5.jpg" class="image m-2 w-100 " alt="Student">
-              <img src="../task4-2/img5.jpg" class="image m-2 w-100 " alt="Student">
+              <img src="../task4-2/assets/img5.jpg" class="image m-2 w-100 " alt="Student">
+              <img src="../task4-2/assets/img5.jpg" class="image m-2 w-100 " alt="Student">
+              <img src="../task4-2/assets/img5.jpg" class="image m-2 w-100 " alt="Student">
               </div>
               </div>
          </div>
